removed-unused-files

--- a/Lol fanzone/Videos.css
+++ b/Lol fanzone/Videos.css
@@ -163,7 +163,8 @@
     margin-right: 0;
     margin-left: 41px;
   }
-}.u-section-2 {
+}
+.u-section-2 {
   background-image: none;
 }
 
@@ -389,7 +390,8 @@
   .u-section-2 .u-video-9 {
     margin-left: 21px;
   }
-}.u-section-3 {
+}
+.u-section-3 {
   background-image: none;
 }
 
@@ -502,7 +504,8 @@
     width: auto;
     margin-left: 28px;
   }
-}.u-section-4 {
+}
+.u-section-4 {
   background-image: none;
 }
 
