--- a/Lol fanzone/Fanzone.css
+++ b/Lol fanzone/Fanzone.css
@@ -1,5 +1,10 @@
 .u-section-1-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/wpp.jpg");
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("images/wpp.jpg");
   background-position: 50% 50%;
 }
 
@@ -89,8 +94,14 @@
     margin-left: 23px;
     margin-right: 23px;
   }
-}.u-section-1-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/wpp2.jpg");
+}
+.u-section-1-2 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("images/wpp2.jpg");
   background-position: 50% 50%;
 }
 
@@ -179,8 +190,14 @@
     margin-left: 23px;
     margin-right: 23px;
   }
-}.u-section-1-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/wpp3.jpg");
+}
+.u-section-1-3 {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("images/wpp3.jpg");
   background-position: 50% 50%;
 }
 
@@ -267,7 +284,8 @@
     margin-left: 23px;
     margin-right: 23px;
   }
-}.u-block-4c1a-2 {
+}
+.u-block-4c1a-2 {
   position: absolute;
   bottom: 10px;
   width: auto;
@@ -285,7 +303,8 @@
   height: 65px;
   left: auto;
   right: 0;
-}.u-section-2 .u-sheet-1 {
+}
+.u-section-2 .u-sheet-1 {
   min-height: 1624px;
 }
 
