--- a/css/styles.css
+++ b/css/styles.css
@@ -832,6 +832,21 @@ html {
   background-size: cover;
 }
 
-/* Fix for flickering carousel */
+.youvid
+{
+margin-bottom: 5%;
+}
 
-/* End of fix */
+
+
+.carousel-control-next, .carousel-control-prev
+{
+  height: 15%;
+  padding-top: 30%;
+}
+
+
+.carousel-indicators .active {
+  background: black;
+}
+
