added open graph meta tags

--- a/css/animations.css
+++ b/css/animations.css
@@ -1,6 +1,6 @@
 .loader {
     align-items: center;
-    background: #000;
+    background: #4615ce;
     display: flex;
     flex-direction: column;
     height: 100vh;
