--- a/css/animations.css
+++ b/css/animations.css
@@ -1,3 +1,4 @@
+/* prelaoder*/
 .loader {
     align-items: center;
     background: #4615ce;
@@ -16,4 +17,35 @@
 html,
 body {
     overflow: hidden;
+}
+
+
+/*W3Bits images basic hover zoom*/
+/* container */
+.img-hover-zoom {
+    overflow: visible;
+    /* Show the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+    transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+    transform: scale(1.3);
+}
+
+
+/* W3Bits images colorize hover zoom*/
+/* Colorize-zoom Container */
+.img-hover-zoom--colorize img {
+    transition: transform .5s, filter 1.5s ease-in-out;
+    filter: grayscale(100%);
+}
+/* The Transformation */
+.img-hover-zoom--colorize:hover img {
+    filter: grayscale(0);
+    transform: scale(1.1);
 }
