--- a/css/animations.css
+++ b/css/animations.css
@@ -21,31 +21,34 @@ body {
 
 
 /*W3Bits images basic hover zoom*/
-/* container */
+/* Show the overflowing of child elements */
+/* [2] Transition property for smooth transformation of images */
 .img-hover-zoom {
     overflow: visible;
-    /* Show the overflowing of child elements */
-}
-
-/* [2] Transition property for smooth transformation of images */
-.img-hover-zoom img {
     transition: transform .5s ease;
 }
 
 /* [3] Finally, transforming the image when container gets hovered */
-.img-hover-zoom:hover img {
+.img-hover-zoom:hover {
     transform: scale(1.3);
 }
 
 
+
 /* W3Bits images colorize hover zoom*/
-/* Colorize-zoom Container */
-.img-hover-zoom--colorize img {
-    transition: transform .5s, filter 1.5s ease-in-out;
+/* Colorize-photo */
+.photo {
+    transition: transform .5s, filter 1.2s ease-in-out;
     filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
 }
+.photo-container{
+    overflow: hidden;
+}
+
 /* The Transformation */
-.img-hover-zoom--colorize:hover img {
+.photo-colorize {
     filter: grayscale(0);
+    -webkit-filter: grayscale(0);
     transform: scale(1.1);
 }
