--- a/css/animations.css
+++ b/css/animations.css
@@ -30,7 +30,7 @@ body {
 
 /* [3] Finally, transforming the image when container gets hovered */
 .img-hover-zoom:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 
 
@@ -51,4 +51,9 @@ body {
     filter: grayscale(0);
     -webkit-filter: grayscale(0);
     transform: scale(1.1);
+}
+
+p:hover,h1:hover,h2:hover
+{
+    transform: scale(1.05);  
 }
