--- a/css/animations.css
+++ b/css/animations.css
@@ -19,13 +19,12 @@ body {
     overflow: hidden;
 }
 
-
 /*W3Bits images basic hover zoom*/
 /* Show the overflowing of child elements */
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom {
     overflow: visible;
-    transition: transform .5s ease;
+    transition: transform 0.5s ease;
 }
 
 /* [3] Finally, transforming the image when container gets hovered */
@@ -33,12 +32,10 @@ body {
     transform: scale(1.2);
 }
 
-
-
 /* W3Bits images colorize hover zoom*/
 /* Colorize-photo */
 .photo {
-    transition: transform .5s, filter 1.2s ease-in-out;
+    transition: transform 0.5s, filter 1.2s ease-in-out;
     filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
 }
