--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-/*!
-* Start Bootstrap - Freelancer v7.0.2 (https://startbootstrap.com/theme/freelancer)
-*/
 :root {
   --bs-font-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -91,7 +88,7 @@ small {
 }
 a {
   color: #ff9a28;
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:hover {
   color: indigo;
@@ -158,7 +155,6 @@ button:not(:disabled) {
   font: inherit;
   -webkit-appearance: button;
 }
-
 
 .lead {
   font-size: 1.25rem;
@@ -710,12 +706,12 @@ html {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #2c3e50;
+  background-color: #4615ce;
   color: #fff;
 }
 
 .copyright {
-  background-color: #1a252f;
+  background-color: #000;
 }
 
 .contacts {
@@ -783,11 +779,12 @@ html {
 
 .flags {
   padding-bottom: 0.1rem;
+  margin: 0;
 }
 
 @media (min-width: 992px) {
   .flags {
-    margin-top: 3rem;
     font-size: 32px;
   }
 }
+
