--- a/css/styles.css
+++ b/css/styles.css
@@ -648,8 +648,8 @@ html {
 }
 
 #mainNav .navbar-toggler {
-  font-size: 80%;
-  padding: 0.8rem;
+  font-size: 65%;
+  padding: 0.5rem;
 }
 
 @media (min-width: 992px) {
@@ -717,6 +717,10 @@ html {
 .contacts {
   color: #fff;
   font-size: 1.5rem;
+}
+
+.carousel{
+  margin-top: 5rem;
 }
 
 .lol-about {
