--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
     margin-left: 5%;
-    background-color: #b3b0b0f6;
+    background-color: white;
 }
 
 
 .dark {
-    background-color: #131212;
+    background-color: black;
     color: white;
 }
 
